name:                  ambiata-viking
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-viking
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           Viking is an opinionated wrapper around the streaming and streaming-bytestring libraries.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

source-repository head
  type:     git
  location: https://github.com/icicle-lang/viking.git

library
  build-depends:
                       base                            >= 3          && < 5
                     , binary                          >= 0.7        && < 0.9
                     , bytestring                      == 0.10.*
                     , exceptions                      >= 0.6        && < 0.11
                     , lifted-async                    >= 0.9        && < 0.11
                     , mmorph                          >= 1.0        && < 1.2
                     , monad-control                   == 1.0.*
                     , resourcet                       >= 1.1
                     , streaming                       >= 0.1        && < 0.3
                     , streaming-bytestring            >= 0.2        && < 0.3
                     , text                            >= 1.0        && < 1.3
                     , transformers                    >= 0.4        && < 0.6
                     , transformers-either

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Viking

                       Viking.Stream
                       Viking.Stream.Binary

                       Viking.ByteStream
                       Viking.Char8Stream

                       Viking.Prelude

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-viking
                     , binary
                     , bytestring
                     , exceptions
                     , filepath                        >= 1.3        && < 1.5
                     , hedgehog                        >= 1.0
                     , mmorph
                     , resourcet
                     , temporary-resourcet             == 0.1.*
                     , transformers
                     , transformers-either

  other-modules:
                       Test.Viking.ByteStream
                       Test.Viking.Char8Stream
                       Test.Viking.Stream
                       Test.Viking.Stream.Binary
